[0.9 final]

* org.jsecurity.spring.SpringWebConfiguration renamed to org.jsecurity.spring.SpringIniWebConfiguration
* org.jsecurity.util.ThreadContext fixed to correctly work in child/spawned threads from a parent thread (sometimes surfaced in Tomcat environments)
* org.jsecurity.web.servlet.FilterChainWrapper renamed to org.jsecurity.web.servlet.ProxiedFilterChain to maintain parallel naming conventions with ProxiedSession.

[0.9 RC2]

* DelegatingSubject is now still usable after it is logged out (no invalid exceptions thrown).
  The Subject is now just considered 'anonymous' again at that point.

* ReflectionBuilder (used in JSecurity .ini and web.xml based text configuration) now handles setting
  primitive attributes correctly, performing proper string-to-primitive conversion (BeanUtils does this automatically).

* ReflectionBuilder (used for JSecurity .ini and web.xml configuration) now supports setting other previously configured
  objects by '$' reference. For example:
  bar = some.package.class.Bar
  foo = some.package.class.Foo
  foo.bar = $bar


