@@ -18,6 +18,8 @@
  */
 package org.jsecurity.web;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.jsecurity.codec.Base64;
 import org.jsecurity.subject.AbstractRememberMeManager;
 import org.jsecurity.web.attr.CookieAttribute;
@@ -54,6 +56,8 @@ import javax.servlet.ServletResponse;
 public class WebRememberMeManager extends AbstractRememberMeManager {
 
     //TODO - complete JavaDoc
+
+    private static transient final Log log = LogFactory.getLog( WebRememberMeManager.class );
 
     /**
      * The default name of the underlying rememberMe cookie which is <code>rememberMe</code>.
@@ -203,7 +207,14 @@ public class WebRememberMeManager extends AbstractRememberMeManager {
         ServletResponse response = WebUtils.getRequiredServletResponse();
         String base64 = getIdentityAttribute().retrieveValue(request, response);
         if (base64 != null) {
-            return Base64.decode(base64);
+            if ( log.isTraceEnabled() ) {
+                log.trace( "Acquired Base64 encoded identity [" + base64 + "]" );
+            }
+            byte[] decoded = Base64.decode(base64);
+            if ( log.isTraceEnabled() ) {
+                log.trace( "Base64 decoded byte array length: " + (decoded != null ? decoded.length : 0) + " bytes." );
+            }
+            return decoded;
         } else {
             //no cookie set - new site visitor?
             return null;
