@@ -1,62 +1,0 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
-package org.jsecurity.web.servlet;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-
-import javax.servlet.*;
-import java.io.IOException;
-import java.util.List;
-
-/**
- * @author Les Hazlewood
- * @since 0.9
- */
-public class FilterChainWrapper implements FilterChain {
-
-    //TODO - complete JavaDoc
-
-    private static final Log log = LogFactory.getLog(FilterChainWrapper.class);
-
-    private FilterChain orig;
-    private List<Filter> filters;
-    private int index = 0;
-
-    public FilterChainWrapper(FilterChain orig, List<Filter> filters) {
-        this.orig = orig;
-        this.filters = filters;
-        this.index = 0;
-    }
-
-    public void doFilter(ServletRequest request, ServletResponse response) throws IOException, ServletException {
-        if (this.filters == null || this.filters.size() == this.index) {
-            //we've reached the end of the wrapped chain, so invoke the original one:
-            if (log.isTraceEnabled()) {
-                log.trace("Invoking original filter chain.");
-            }
-            this.orig.doFilter(request, response);
-        } else {
-            if (log.isTraceEnabled()) {
-                log.trace("Invoking wrapped filter at index [" + this.index + "]");
-            }
-            this.filters.get(this.index++).doFilter(request, response, this);
-        }
-    }
-}
